# agent-mode

./: .env  .gitignore  pyproject.toml
agent/: __init__.py  cli.py  cli_executor.py  context_manager.py  core.py  logging_setup.py  nlp_parser.py  permission.py  permission_manager.py  permissions.py  planner.py  plugin_loader.py  reasoning.py  recovery.py  workflow.py  workflow_manager.py
agent/plugins/: base.py  github.py
config/: permissions.yaml
interface/: agent_shell.py  auto_detector.py  output_formatter.py  repl.py
scripts/: bootstrap.sh  run_agent.py
tests/: test_core.py  test_permissions.py  test_plugins.py
